diss: minor adds in intro chapter

--- a/intro.tex
+++ b/intro.tex
@@ -1179,7 +1179,9 @@ is given in Sections *****.
 \subsection{Cautious Epistemic Information for Alpha-Factors}
 \label{sec:imprecise-alpha}
 
-***As a preview on the general concept of Bayesian inference with sets of priors, *****
+As a preview on the general concept of Bayesian inference with sets of conjugate priors,
+we will now demonstrate how inferences on alpha-factors can benefit from
+considering sets of priors based on sets of hyperparameters.
 
 For Bayesian inference in the Dirichlet-Multinomial model
 when no prior information is available,
@@ -1560,7 +1562,7 @@ from various sorts of hypothetical data.
 
 In the above application, Bayesian inference in the Dirichlet-Multinomial model
 was generalized to imprecise or interval probability methods.
-In the main part of the thesis,
+Next, in the main part of the thesis,
 we will give a general introduction to the methodology of imprecise or interval probability,
 discuss further motivations for the use of interval probability methods for statistical inference,
 and show that inferences in canonical conjugates as described in Section~\ref{sec:regularconjugates}
