diss: first changes on chapter 2

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -3,7 +3,7 @@
 \begin{itemize}
 \item Short introduction to IP (sets of priors, lower/upper prevision/probability)
 %\item motivate imprecise priors with ress paper: \cite{Troffaes2013a} --- now in intro
-\item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a})
+\item \pdc\ (Evans \& Moshonov, Fuquene-Cook-Pericchi), examples (Festschrift paper: \cite{Walter2010a})
 \item further motivations for IP (ITIP chapter \cite{itip-statinf}) 
 \item Generalized Bayesian inference
 \item Generalized Bayesian inference with sets of priors
@@ -13,11 +13,45 @@
  \item parameter set shapes
  \end{itemize}
 \item IDM
-\item IJAR paper \cite{Walter2009a}
+\item JSTP paper \cite{Walter2009a}
 \item isipta11 paper \cite{Walter2011a}
 \item boatshape?
 \end{itemize}
 
+After having seen a detailed example for Bayesian inference using sets of conjugate priors in Section~\ref{sec:commoncause},
+in the main chapter of this thesis,
+we will give now a general introduction to the methodology of Bayesian inference with sets of conjugate priors.
+In Section ****, \\
+Section **** 
+
+
+\section{Imprecise or Interval Probability Calculus}
+\label{sec:ip-intro}
+
+not single number, but interval: old idea\\
+adding another modeling dimension
+
+main monographs: Weichselberger (axiomatic), Walley (subjective Bayesian)
+
+lower and upper probabilities or expectations,
+link to sets of probability distributions,
+sets of desirable gambles as mathematical formulation
+
+coherent lower probabilities etc.
+
+
+many links to concepts that aim to complement probability theory as tool for handling uncertainty,
+like possibilistic reasoning, fuzzy probabilities, etc.
+
+
+\section{***Motivations for IP}
+
+\subsection{\pdc }
+
+\subsection{Weakly Informative Priors}
+
+
+\subsection{Other Motives}
 
 %for later in IDM/IBBM discussion:\\
 %we use Walley's \cite[\S 7.7.3, p.~395]{1991:walley} $(s,\vec{t})$ notation for the hyperparameters.
